--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "surge-build": "ng build --target=production && cp dist/index.html dist/200.html",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
