--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@ngrx/effects": "^4.1.1",
+    "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "core-js": "^2.4.1",
     "reselect": "^3.0.1",
